test/tests/stages/14_pointers/invalid_parse/abstract_function_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  (
  int
  (
  void
  )
  )
  const int(0)
  ;
  return
  const int(0)
  ;
  }
